--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.0",
+    "jest": "^29.3.1",
     "jwt-decode": "^3.1.2",
     "keycloak-js": "^17.0.0",
     "loglevel": "^1.8.0",
@@ -37,7 +38,6 @@
     "react-scripts": "^5.0.0",
     "selenium-webdriver": "^4.0.0-alpha.3",
     "subscriptions-transport-ws": "^0.9.19",
-    "supertest": "^6.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
