--- a/configuration-api/package.json
+++ b/configuration-api/package.json
@@ -41,7 +41,8 @@
     "passport-jwt": "^4.0.0",
     "sinon": "9.2.2",
     "streamifier": "^0.1.1",
-    "subscriptions-transport-ws": "0.9.18"
+    "subscriptions-transport-ws": "0.9.18",
+    "uid": "^2.0.1"
   },
   "devDependencies": {
     "chai": "^4.3.6",
