fix hardcoded .env / add index

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,7 +63,8 @@ services:
     build:
       context: ./
       dockerfile: ./Dockerfile
-    env_file: .env
+    volumes:
+      - .env.docker:/usr/share/nginx/.env
     image: orchestracities/management-ui
     ports:
       - "3000:80"
