--- a/.github/workflows/graphQL_tests.yml
+++ b/.github/workflows/graphQL_tests.yml
@@ -30,6 +30,8 @@ jobs:
             ${{ runner.os }}-node-v${{ matrix.node }}-
       - name: Setup Docker
         run: bash start.sh dev
+      - name: Copy env file
+        run: cp .env.development configuration-api/.env
       - name: Install Dependencies
         run: npm install --force
         working-directory: configuration-api
