--- a/.github/workflows/graphQL_tests.yml
+++ b/.github/workflows/graphQL_tests.yml
@@ -19,8 +19,8 @@ jobs:
         with:
           node-version: '${{ matrix.node }}'
       - uses: actions/checkout@v3
-      - name: Generate env file
-        run: cp .env.development ./configuration-api/.env
+      # - name: Generate env file
+      #   run: cp .env.development ./configuration-api/.env
       - name: 'Cache node_modules'
         uses: actions/cache@v3
         with:
