--- a/.github/workflows/graphQL_tests.yml
+++ b/.github/workflows/graphQL_tests.yml
@@ -29,7 +29,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-v${{ matrix.node }}-
       - name: Setup Docker
-        run: bash start.sh dev
+        run: ./start.sh dev
       - name: Install Dependencies
         run: npm install --force
         working-directory: configuration-api
@@ -40,4 +40,4 @@ jobs:
         run: node main/advancedAuth.js & npm test
         working-directory: configuration-api
       - name: stop Docker
-        run: bash stop.sh
+        run: ./stop.sh dev
