--- a/.github/workflows/graphQL_tests.yml
+++ b/.github/workflows/graphQL_tests.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Setup Docker
         run: ./start.sh dev
       - name: Install Dependencies
-        run: npm install --force
+        run: npm install
         working-directory: configuration-api
       - name: populate DB
         run: node main/mongo/populateDB.js
