--- a/configuration-api/dockerfile
+++ b/configuration-api/dockerfile
@@ -4,7 +4,7 @@ LABEL description="Graphql configs for the webapp"
 LABEL maintainer = ["valerio.cantore@martel-innovate.com"]
 WORKDIR /configuration-api
 COPY ["package.json", "package-lock.json", "./"]
-RUN npm install --force
+RUN npm install
 COPY . .
 EXPOSE 4000
 CMD ["node", "main/advancedAuth.js"]
