--- a/.env.development
+++ b/.env.development
@@ -1,12 +1,12 @@
 REACT_APP_URI=http://localhost:3000/
 REACT_APP_ANUBIS_API_URL=http://localhost:8085/
 REACT_APP_CONFIGURATION_API_URL=http://localhost:4000/configuration
-REACT_APP_OIDC_ISSUER=http://keycloak:8080/realms/default
+REACT_APP_OIDC_ISSUER=http://localhost:8080/realms/default
 REACT_APP_OIDC_CLIENT=configuration
 REACT_APP_OIDC_SCOPE="openid profile email"
 REACT_APP_IMAGE_SIZE=20
 REACT_APP_LOG_LEVEL=debug
-REACT_APP_KEYCLOACK_ADMIN=http://keycloak:8080/admin/realms/default
+REACT_APP_KEYCLOACK_ADMIN=http://localhost:8080/admin/realms/default
 REACT_APP_ORION=http://localhost:1026/v2/entities
 
 
@@ -19,3 +19,4 @@ JWKS_URL=http://localhost:8080/realms/default/protocol/openid-connect/certs
 
 REACT_APP_TITLE=Anubis
 REACT_APP_DESCRIPTION="A Management UI for Anubis"
+
