--- a/.env.development
+++ b/.env.development
@@ -7,7 +7,7 @@ REACT_APP_OIDC_SCOPE="openid profile email"
 REACT_APP_IMAGE_SIZE=20
 REACT_APP_LOG_LEVEL=debug
 REACT_APP_KEYCLOACK_ADMIN=http://keycloak:8080/admin/realms/default
-REACT_APP_ORION=http://localhost:1026/v2/entities
+REACT_APP_ORION=http://localhost:1026/v2/entities?attrs=id&orderBy=id
 
 
 MONGO_DB=mongodb://localhost:27017/graphql
