--- a/configuration-api/package.json
+++ b/configuration-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auth-management-ui-configuration-api",
-  "version": "0.6.0",
+  "version": "0.7.0-dev",
   "keywords": [
     "graphql",
     "apollo",
