--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@mui/material": "latest",
     "@mui/system": "^5.10.15",
     "@mui/utils": "^5.10.15",
+    "@mui/x-date-pickers": "^5.0.10",
     "@testing-library/jest-dom": "^5.16.2",
     "axios": "^0.26.1",
     "colord": "^2.9.2",
     "cra-envs": "^1.2.6",
+    "dayjs": "^1.11.7",
     "eslint-config-react-app": "^7.0.1",
     "graphql": "^16.3.0",
     "graphql-ws": "^5.6.3",
@@ -23,6 +25,7 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "jwt-decode": "^3.1.2",
     "loglevel": "^1.8.0",
+    "moment": "^2.29.4",
     "mui-file-dropzone": "^4.0.1",
     "notistack": "^2.0.5",
     "prop-types": "^15.8.1",
