--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "@axa-fr/react-oidc": "^5.13.5",
     "@babel/eslint-parser": "^7.19.1",
     "@emotion/react": "latest",
-    "@emotion/styled": "v11.6.0",
+    "@emotion/styled": "v11.3.0",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "latest",
     "@mui/system": "^5.10.15",
     "@mui/utils": "^5.10.15",
-    "@mui/x-date-pickers": "^5.0.10",
+    "@mui/x-date-pickers": "latest",
     "@testing-library/jest-dom": "^5.16.2",
     "axios": "^0.26.1",
     "colord": "^2.9.2",
