--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@axa-fr/react-oidc": "^5.13.5",
     "@babel/eslint-parser": "^7.19.1",
     "@emotion/react": "latest",
-    "@emotion/styled": "v11.3.0",
-    "@mui/icons-material": "^5.6.2",
+    "@emotion/styled": "latest",
+    "@mui/icons-material": "^5.10.15",
     "@mui/material": "latest",
     "@mui/system": "^5.10.15",
     "@mui/utils": "^5.10.15",
