requested changes from the pr

--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "@apollo/client": "^3.5.10",
     "@axa-fr/react-oidc": "^5.13.5",
     "@babel/eslint-parser": "^7.19.1",
-    "@emotion/react": "latest",
-    "@emotion/styled": "latest",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.15",
-    "@mui/material": "latest",
+    "@mui/material": "^5.11.0",
     "@mui/system": "^5.10.15",
     "@mui/utils": "^5.10.15",
-    "@mui/x-date-pickers": "latest",
+    "@mui/x-date-pickers": "^5.0.10",
     "@testing-library/jest-dom": "^5.16.2",
     "axios": "^0.26.1",
     "colord": "^2.9.2",
