--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
     "@apollo/client": "^3.5.10",
     "@axa-fr/react-oidc": "^5.13.5",
     "@babel/eslint-parser": "^7.19.1",
-    "@emotion/react": "latest",
-    "@emotion/styled": "v11.6.0",
-    "@mui/icons-material": "^5.6.2",
-    "@mui/material": "latest",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.15",
+    "@mui/material": "^5.11.0",
     "@mui/system": "^5.10.15",
     "@mui/utils": "^5.10.15",
+    "@mui/x-date-pickers": "^5.0.10",
     "@testing-library/jest-dom": "^5.16.2",
     "axios": "^0.26.1",
     "colord": "^2.9.2",
     "cra-envs": "^1.2.6",
+    "dayjs": "^1.11.7",
     "eslint-config-react-app": "^7.0.1",
     "graphql": "^16.3.0",
     "graphql-ws": "^5.6.3",
@@ -23,6 +25,7 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "jwt-decode": "^3.1.2",
     "loglevel": "^1.8.0",
+    "moment": "^2.29.4",
     "mui-file-dropzone": "^4.0.1",
     "notistack": "^2.0.5",
     "prop-types": "^15.8.1",
