--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,7 @@ services:
   management-ui:
     build:
       context: ./
-      dockerfile: ./dockerfile
+      dockerfile: ./Dockerfile
     volumes:
       - .env.docker:/usr/share/nginx/.env
     image: orchestracities/management-ui
@@ -74,7 +74,7 @@ services:
   configuration-api:
     build:
       context: ./configuration-api
-      dockerfile: ./dockerfile
+      dockerfile: ./Dockerfile
     env_file: .env
     image: orchestracities/configuration-api
     ports:
