--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "graphql-ws": "^5.6.3",
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
+    "jsoneditor": "^9.9.2",
+    "jsoneditor-react": "^3.1.2",
     "jwt-decode": "^3.1.2",
     "loglevel": "^1.8.0",
     "moment": "^2.29.4",
