map interaction ready

--- a/.env.docker
+++ b/.env.docker
@@ -8,6 +8,7 @@ REACT_APP_IMAGE_SIZE=20
 REACT_APP_LOG_LEVEL=info
 REACT_APP_KEYCLOACK_ADMIN=http://keycloak:8080/admin/realms/default
 REACT_APP_ORION=http://localhost:1026
+REACT_APP_GOOGLE_MAPS=AIzaSyA9AAJZH20xls_aPI-EQL1QZtQc-mlNSIg
 
 MONGO_DB=mongodb://mongo:27017/graphql
 CONFIGURATION_API_PORT=4000
