--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsoneditor": "^9.9.2",
     "jsoneditor-react": "^3.1.2",
     "jwt-decode": "^3.1.2",
+    "leaflet": "^1.9.3",
     "loglevel": "^1.8.0",
     "moment": "^2.29.4",
     "mui-file-dropzone": "^4.0.1",
@@ -34,7 +35,9 @@
     "react": "^17.0.2",
     "react-colorful": "^5.5.1",
     "react-dom": "^17.0.2",
+    "react-google-places-autocomplete": "^3.4.0",
     "react-i18next": "^11.16.7",
+    "react-leaflet": "^3.2.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "subscriptions-transport-ws": "^0.9.19",
