--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cra-envs": "^1.2.6",
     "dayjs": "^1.11.7",
     "eslint-config-react-app": "^7.0.1",
+    "geojson-validation": "^1.0.2",
     "graphql": "^16.3.0",
     "graphql-ws": "^5.6.3",
     "i18next": "^21.6.16",
