--- a/documentation/package.json
+++ b/documentation/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "lint": "eslint --fix --ext .js,.jsx .",
     "prettier": "prettier --write './**/*.{js,jsx}' --config .prettierrc.json",
     "chromatic": "npx chromatic --project-token=36b63a5f4dbe"
@@ -15,20 +15,23 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@storybook/addon-actions": "^6.5.13",
-    "@storybook/addon-essentials": "^6.5.13",
-    "@storybook/addon-interactions": "^6.5.13",
-    "@storybook/addon-links": "^6.5.13",
-    "@storybook/builder-webpack4": "^6.5.13",
-    "@storybook/manager-webpack4": "^6.5.13",
-    "@storybook/react": "^6.5.13",
-    "@storybook/testing-library": "^0.0.13",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@storybook/addon-actions": "^7.0.0-beta.40",
+    "@storybook/addon-essentials": "^7.0.0-beta.40",
+    "@storybook/addon-interactions": "^7.0.0-beta.40",
+    "@storybook/addon-links": "^7.0.0-beta.40",
+    "@storybook/react": "^7.0.0-beta.40",
+    "@storybook/react-webpack5": "^7.0.0-beta.40",
+    "@storybook/testing-library": "^0.0.14-next.1",
     "chromatic": "^6.6.4",
     "eslint": "^8.14.0",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "storybook": "^7.0.0-beta.40"
   },
   "dependencies": {
-    "@storybook/addon-docs": "^6.5.13"
+    "@storybook/addon-docs": "^7.0.0-beta.40"
   },
   "readme": "ERROR: No README data found!",
   "_id": "documentation@1.0.0"
