--- a/.env.development
+++ b/.env.development
@@ -13,7 +13,7 @@ REACT_APP_GOOGLE_MAPS=INSERTKEYHERE
 MONGO_DB=mongodb://localhost:27017/graphql
 CONFIGURATION_API_PORT=4000
 LOGOPS_LEVEL=DEBUG
-JWKS_URL=http://localhost:8080/realms/default/protocol/openid-connect/certs
+JWKS_URL=http://keycloak:8080/realms/default/protocol/openid-connect/certs
 
 #Envs that will be used to customize the index.html
 
