Entity modify&creation (#148 #114) (#150)
* form structure freeze

* entity modify freeze

* change url

* up

* ID && attributeName controls

* JSON edit

* map interaction ready

* JSON editor linked to the Map

* map and translations are now complete

* improvments

* improvments on JSON forms

* documentation for the form

* up

* notes

* up linter

* documentation fix

* fixing up the docs

* autocomplete for the type on creation

* pr comments

--- a/.env.development
+++ b/.env.development
@@ -8,7 +8,7 @@ REACT_APP_IMAGE_SIZE=20
 REACT_APP_LOG_LEVEL=debug
 REACT_APP_KEYCLOACK_ADMIN=http://keycloak:8080/admin/realms/default
 REACT_APP_ORION=http://localhost:1026
-
+REACT_APP_GOOGLE_MAPS=INSERTKEYHERE
 
 MONGO_DB=mongodb://localhost:27017/graphql
 CONFIGURATION_API_PORT=4000
