--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "cra-envs": "^1.2.6",
     "dayjs": "^1.11.7",
     "eslint-config-react-app": "^7.0.1",
+    "geojson-validation": "^1.0.2",
     "graphql": "^16.3.0",
     "graphql-ws": "^5.6.3",
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
+    "jsoneditor": "^9.9.2",
+    "jsoneditor-react": "^3.1.2",
     "jwt-decode": "^3.1.2",
+    "leaflet": "^1.9.3",
     "loglevel": "^1.8.0",
     "moment": "^2.29.4",
     "mui-file-dropzone": "^4.0.1",
@@ -32,7 +36,9 @@
     "react": "^17.0.2",
     "react-colorful": "^5.5.1",
     "react-dom": "^17.0.2",
+    "react-google-places-autocomplete": "^3.4.0",
     "react-i18next": "^11.16.7",
+    "react-leaflet": "^3.2.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "subscriptions-transport-ws": "^0.9.19",
