--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auth-management-ui",
-  "version": "0.8.0",
+  "version": "0.9.0-dev",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.10",
