--- a/.env.development
+++ b/.env.development
@@ -9,6 +9,8 @@ REACT_APP_LOG_LEVEL=debug
 REACT_APP_KEYCLOACK_ADMIN=http://keycloak:8080/admin/realms/default
 REACT_APP_ORION=http://localhost:1026
 REACT_APP_GOOGLE_MAPS=INSERTKEYHERE
+REACT_APP_TABLE_PAGINATION_OPTIONS=[10, 25, 50]
+REACT_APP_TABLE_DEFAULT_DATA_AMOUNT=10
 
 MONGO_DB=mongodb://localhost:27017/graphql
 CONFIGURATION_API_PORT=4000
