--- a/configuration-api/package.json
+++ b/configuration-api/package.json
@@ -3,7 +3,6 @@
   "version": "0.9.0-dev",
   "keywords": [
     "graphql",
-    "apollo",
     "oidc",
     "authentication",
     "express",
@@ -17,12 +16,12 @@
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
-    "apollo-server-errors": "^3.3.1",
-    "apollo-server-express": "^3.11.1",
+    "@apollo/server": "^4.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "jwks-rsa": "^2.1.4",
     "logops": "^2.1.2",
     "mongoose": "^6.2.11",
