--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.10",
-    "@axa-fr/react-oidc": "^5.13.5",
+    "@axa-fr/react-oidc": "^6.15.9",
     "@babel/eslint-parser": "^7.19.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -12,9 +12,9 @@
     "@mui/material": "^5.11.0",
     "@mui/system": "^5.10.15",
     "@mui/utils": "^5.10.15",
-    "@mui/x-date-pickers": "^5.0.10",
+    "@mui/x-date-pickers": "^6.0.1",
     "@testing-library/jest-dom": "^5.16.2",
-    "axios": "^0.26.1",
+    "axios": "^1.3.4",
     "colord": "^2.9.2",
     "cra-envs": "^1.2.6",
     "dayjs": "^1.11.7",
@@ -22,8 +22,8 @@
     "geojson-validation": "^1.0.2",
     "graphql": "^16.3.0",
     "graphql-ws": "^5.6.3",
-    "i18next": "^21.6.16",
-    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next": "^22.4.11",
+    "i18next-browser-languagedetector": "^7.0.1",
     "jsoneditor": "^9.9.2",
     "jsoneditor-react": "^3.1.2",
     "jwt-decode": "^3.1.2",
@@ -31,18 +31,19 @@
     "loglevel": "^1.8.0",
     "moment": "^2.29.4",
     "mui-file-dropzone": "^4.0.1",
-    "notistack": "^2.0.5",
+    "notistack": "^3.0.1",
+    "npm": "^9.6.1",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-colorful": "^5.5.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^3.4.0",
-    "react-i18next": "^11.16.7",
-    "react-leaflet": "^3.2.5",
+    "react-i18next": "^12.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "validator": "^13.7.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -74,7 +75,7 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^11.2.0",
+    "cypress": "^12.8.0",
     "cypress-react-selector": "^3.0.0",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
