--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.9.0-dev",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.5.10",
+    "@apollo/client": "^3.7.10",
     "@axa-fr/react-oidc": "^6.15.9",
     "@babel/eslint-parser": "^7.19.1",
     "@emotion/react": "^11.10.5",
@@ -24,8 +24,6 @@
     "graphql-ws": "^5.6.3",
     "i18next": "^22.4.11",
     "i18next-browser-languagedetector": "^7.0.1",
-    "jsoneditor": "^9.9.2",
-    "jsoneditor-react": "^3.1.2",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.3",
     "loglevel": "^1.8.0",
@@ -43,6 +41,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "validator": "^13.7.0",
+    "vanilla-jsoneditor": "^0.16.0",
     "web-vitals": "^3.3.0"
   },
   "scripts": {
