--- a/.env.development
+++ b/.env.development
@@ -12,7 +12,7 @@ REACT_APP_GOOGLE_MAPS=INSERTKEYHERE
 REACT_APP_TABLE_PAGINATION_OPTIONS=[10, 25, 50]
 REACT_APP_TABLE_DEFAULT_DATA_AMOUNT=10
 
-MONGO_DB=mongodb://localhost:27017/graphql
+MONGO_DB=mongodb://root:example@localhost:27017/admin
 CONFIGURATION_API_PORT=4000
 LOGOPS_LEVEL=DEBUG
 JWKS_URL=http://keycloak:8080/realms/default/protocol/openid-connect/certs
