--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -51,9 +51,8 @@ services:
     image: fiware/orion:${ORION_VERSION:-3.3.1}
     ports:
       - "1026:1026"
-    command: -logLevel DEBUG -noCache -dbhost localhost:27017 -dbAuthDb admin -dbuser root -dbpwd example -corsOrigin __ALL
+    command: -logLevel DEBUG -noCache -dbhost mongo -dbAuthDb admin -dbuser root -dbpwd example -corsOrigin __ALL
     
-
     depends_on:
       - mongo
     healthcheck:
