--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,8 @@ services:
   mongo:
     image: mongo:4.4
     environment:
-      # provide your credentials here
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=admin
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
     ports:
       - "27017:27017"
     volumes:
@@ -52,7 +51,7 @@ services:
     image: fiware/orion:${ORION_VERSION:-3.3.1}
     ports:
       - "1026:1026"
-    command: -logLevel DEBUG -noCache -dbhost mongo -corsOrigin __ALL
+    command: -logLevel DEBUG -noCache -dbhost mongo -dbAuthDb admin -dbuser root -dbpwd example -corsOrigin __ALL
     depends_on:
       - mongo
     healthcheck:
