--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,7 +64,7 @@ jobs:
       - name: set-up environment
         run: cp .env.docker .env
       - name: Setup Docker
-        run: ./start.sh silent
+        run: ./start.sh
       - name: Install Dependencies
         run: npm install
       - name: Run cypress tests
