--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -24,6 +24,9 @@ services:
     image: mongo:4.4
     ports:
       - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
     volumes:
       - mongodata:/data/db
     networks:
@@ -48,7 +51,8 @@ services:
     image: fiware/orion:${ORION_VERSION:-3.3.1}
     ports:
       - "1026:1026"
-    command: -logLevel DEBUG -noCache -dbhost mongo -corsOrigin __ALL
+    command: -logLevel DEBUG -noCache -dbhost mongo -dbAuthDb admin -dbuser root -dbpwd example -corsOrigin __ALL
+    
     depends_on:
       - mongo
     healthcheck:
