--- a/documentation/package.json
+++ b/documentation/package.json
@@ -18,20 +18,20 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
-    "@storybook/addon-actions": "^7.0.0-beta.40",
-    "@storybook/addon-essentials": "^7.0.0-beta.40",
-    "@storybook/addon-interactions": "^7.0.0-beta.40",
-    "@storybook/addon-links": "^7.0.0-beta.40",
-    "@storybook/react": "^7.0.0-beta.40",
-    "@storybook/react-webpack5": "^7.0.0-beta.40",
+    "@storybook/addon-actions": "^7.0.6",
+    "@storybook/addon-essentials": "^7.0.6",
+    "@storybook/addon-interactions": "^7.0.6",
+    "@storybook/addon-links": "^7.0.6",
+    "@storybook/react": "^7.0.6",
+    "@storybook/react-webpack5": "^7.0.6",
     "@storybook/testing-library": "^0.0.14-next.1",
     "chromatic": "^6.6.4",
     "eslint": "^8.14.0",
     "prettier": "^2.6.2",
-    "storybook": "^7.0.0-beta.40"
+    "storybook": "^7.0.6"
   },
   "dependencies": {
-    "@storybook/addon-docs": "^7.0.0-beta.40"
+    "@storybook/addon-docs": "^7.0.6"
   },
   "readme": "ERROR: No README data found!",
   "_id": "documentation@1.0.0"
