no config inside graphql

--- a/.env.development
+++ b/.env.development
@@ -14,6 +14,7 @@ REACT_APP_TABLE_DEFAULT_DATA_AMOUNT=10
 
 MONGO_DB=mongodb://root:example@localhost:27017/admin
 CONFIGURATION_API_PORT=4000
+ALARMS_SAVE=mongo
 LOGOPS_LEVEL=DEBUG
 JWKS_URL=http://keycloak:8080/realms/default/protocol/openid-connect/certs
 
