--- a/.env.development
+++ b/.env.development
@@ -17,7 +17,14 @@ CONFIGURATION_API_PORT=4000
 ALARMS_SAVE=mongo
 LOGOPS_LEVEL=DEBUG
 JWKS_URL=http://keycloak:8080/realms/default/protocol/openid-connect/certs
-
+NOTIFICATION_DELAY=1000
+DEV_VERSION=true
+MAIL_HOST=
+MAIL_ACCOUNT=
+MAIL_PASS=
+MAIL_SUBJECT=Something about entity: 
+MAIL_MESSAGE=There is Something about this entity
+MAIL_FROM=just@example.com
 #Envs that will be used to customize the index.html
 
 REACT_APP_TITLE=Anubis
