--- a/configuration-api/package.json
+++ b/configuration-api/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.4.1",
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
@@ -25,6 +26,7 @@
     "jwks-rsa": "^2.1.4",
     "logops": "^2.1.2",
     "mongoose": "^6.2.11",
+    "nodemailer": "^6.9.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "uid": "^2.0.1"
